==> loboris/MicroPython_K210_LoBo/k210-freertos/mpy_support/standard_lib/machine/machine_timer.c <==
#include <stdint.h>
#include <stdio.h>
#include "py/runtime.h"
#include "modmachine.h"
#define TIMER_RUNNING	1
#define TIMER_PAUSED	0
#define TIMER_TYPE_ONESHOT	0
#define TIMER_TYPE_PERIODIC	1
#define TIMER_TYPE_CHRONO	2
#define TIMER_TYPE_MAX		3
#define TIMER_MAX_TIMERS    12
#define TIMER_TASK_EXIT     0xA5

STATIC void machine_timer_isr(void *userdata)
{
    machine_timer_obj_t *self = (machine_timer_obj_t *)userdata;

    bool notify = false;
    self->event_num++;
    if (self->type == TIMER_TYPE_CHRONO) return;

    if (self->period > 1000000) {
        // Period > 1 second
        self->event_num--;
        self->remain -= (self->interval / 1000);
        if (self->remain <= 0) {
            self->event_num++;
            if (!self->repeat) {
                timer_set_enable(self->handle, false);
                self->state = TIMER_PAUSED;
            }
            else self->remain = self->period;
            notify = true;
        }
    }
    else {
        if (!self->repeat) {
            timer_set_enable(self->handle, false);
            self->state = TIMER_PAUSED;
        }
        notify = true;
    }
    if ((notify) && (timer_task_handle)) {
        BaseType_t HPTaskAwoken = pdFALSE;
        if (xTaskNotifyFromISR(timer_task_handle, (uintptr_t)self, eSetValueWithoutOverwrite, &HPTaskAwoken) == pdPASS) {
            if (HPTaskAwoken == pdTRUE) vPortYieldFromISR();
        }
    }
}

STATIC mp_obj_t machine_timer_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *args)
{
    mp_arg_check_num(n_args, n_kw, 1, 1, false);
    machine_timer_obj_t *self = m_new_obj(machine_timer_obj_t);

    self->base.type = &machine_timer_type;

    self->callback = NULL;
    self->handle = 0;
    self->event_num = 0;
    self->cb_num = 0;
    self->pin = -1;
	self->state = TIMER_PAUSED;
	self->type = TIMER_TYPE_MAX;

    int tmr = mp_obj_get_int(args[0]);
    if ((tmr < 0) || (tmr > 11)) {
    	mp_raise_ValueError("Only timers 0~11 can be used.");
    }
    if (mpy_timers_used[tmr] != NULL) {
        mp_raise_ValueError("Timer already used used.");
    }
    self->id = tmr;
    mpy_timers_used[tmr] = self;

    if (timer_task_handle == NULL) {
        BaseType_t res = xTaskCreate(
                timer_task,                             // function entry
                "Timer_task",                           // task name
                configMINIMAL_STACK_SIZE,               // stack_deepth
                (void *)xTaskGetCurrentTaskHandle(),    // function argument
                MICROPY_TASK_PRIORITY+1,                // task priority
                &timer_task_handle);                    // task handle
        if (res != pdPASS) timer_task_handle = NULL;
    }

    return self;
}

static void machine_timer_enable(machine_timer_obj_t *self)
{
    char timer_dev[16];

    sprintf(timer_dev, "/dev/timer%d", self->id);
    self->handle = io_open(timer_dev);
    if (self->handle == 0) {
        mp_raise_ValueError("Error opening timed device");
    }

    timer_set_on_tick(self->handle, machine_timer_isr, (void *)self);

    timer_set_period(self, true);
}

static void machine_timer_disable(machine_timer_obj_t *self)
{
    if (self->handle) {
        timer_set_enable(self->handle, false);
        io_close(self->handle);
    }
    if (self->pin >= 0) {
        gpiohs_set_free(self->pin_gpio);
        mp_used_pins[self->pin].func = GPIO_FUNC_NONE;
        mp_used_pins[self->pin].gpio = 0;
        mp_used_pins[self->pin].fpioa_func = FUNC_DEBUG31;
        self->pin_gpio = -1;
        self->pin = -1;
    }
    mpy_timers_used[self->id] = NULL;
    self->id = -1;
    self->callback = NULL;
    self->handle = 0;
    self->event_num = 0;
    self->cb_num = 0;
    self->state = TIMER_PAUSED;
    self->type = TIMER_TYPE_MAX;

    int i = TIMER_MAX_TIMERS;
    for (i=0; i< TIMER_MAX_TIMERS; i++) {
        if (mpy_timers_used[i]) break;
    }
    // Terminate Timer task if no timers running
    if (i >= TIMER_MAX_TIMERS) xTaskNotify(timer_task_handle, TIMER_TASK_EXIT, eSetValueWithOverwrite);
}

STATIC mp_obj_t machine_timer_init_helper(machine_timer_obj_t *self, mp_uint_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args)
{
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_period,       MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = 1000000} },
        { MP_QSTR_mode,         MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = TIMER_TYPE_PERIODIC} },
        { MP_QSTR_callback,     MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = mp_const_none} },
        { MP_QSTR_pin,          MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
    };

    machine_timer_disable(self);

    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    if ((args[1].u_int < 0) || (args[1].u_int > TIMER_TYPE_MAX)) {
        mp_raise_ValueError("Wrong timer type");
    }
    self->handle = 0;
    self->event_num = 0;
    self->cb_num = 0;
    self->pin = -1;

    self->type = args[1].u_int & 3;

    if (self->type == TIMER_TYPE_CHRONO) {
        // Chrono Timer uses an 1 MHz clock, no callback
        // set period in us
        self->period = 1;
        self->repeat = 0;
        self->callback = NULL;
    }
    else {
        if ((args[0].u_int < 1) || (args[0].u_int > 86400000000)) {
            mp_raise_ValueError("Period out of range (1 ~ 86400000000 us)");
        }
        self->period = args[0].u_int;
        self->repeat = args[1].u_int & 1;

        // Set the timer callback if given
        if (args[2].u_obj != mp_const_none) {
            if ((mp_obj_is_fun(args[2].u_obj)) || (mp_obj_is_meth(args[2].u_obj)))
                self->callback = args[2].u_obj;
            else {
                mp_raise_ValueError("Callback function expected");
            }
        }

        // set the timer pin if used
        if ((args[3].u_int >= 0) && (args[3].u_int < 34)) {
            set_timer_pin(self, args[3].u_int);
        }
    }
    // enable and start the timer
    machine_timer_enable(self);

    if (self->type != TIMER_TYPE_CHRONO) self->state = TIMER_RUNNING;
    else self->state = TIMER_PAUSED;

    return mp_const_none;
}

STATIC mp_obj_t machine_timer_value(mp_obj_t self_in)
{
    machine_timer_obj_t *self = self_in;
    uint64_t result;

    if (self->type == TIMER_TYPE_CHRONO) result = self->event_num;
    else {
        uint32_t val = timer_get_value(self->handle, NULL, NULL);
        double tmns = (double)(self->loadval - val) * self->resolution;
        result = (uint64_t)tmns / 1000;
        if (self->period > 1000000) {
            result += self->remain;
        }
    }
    return mp_obj_new_int(result);
}

STATIC mp_obj_t machine_timer_start(mp_obj_t self_in)
{
    machine_timer_obj_t *self = self_in;

    timer_set_enable(self->handle, false);
    self->event_num = 0;
    self->cb_num = 0;
    timer_set_period(self, true);

    return mp_const_none;
}

STATIC mp_obj_t machine_timer_shot(size_t n_args, const mp_obj_t *args)
{
    machine_timer_obj_t *self = args[0];

    if (self->type != TIMER_TYPE_ONESHOT) {
    	mp_raise_ValueError("Timer is not one_shot timer.");
    }

    if (n_args > 1) {
        // Pause timer
        timer_set_enable(self->handle, false);
        self->state = TIMER_PAUSED;
        // Set new period
        int64_t period = mp_obj_get_int(args[1]);
        if ((period < 1) || (period > 86400000000)) {
            mp_raise_ValueError("Period out of range (1 ~ 86400000000 us)");
        }
        self->period = period;
    }

    timer_set_period(self, true);

    return mp_const_none;
}

STATIC mp_obj_t machine_timer_period(size_t n_args, const mp_obj_t *args)
{
    machine_timer_obj_t *self = args[0];

    if ((n_args > 1) && (self->type != TIMER_TYPE_CHRONO)) {
        int64_t period;
		uint8_t old_state = self->state;
		// Pause timer
        timer_set_enable(self->handle, false);
		self->state = TIMER_PAUSED;

		// Set new period
		period = mp_obj_get_int(args[1]);
        if ((period < 1) || (period > 86400000000)) {
            timer_set_period(self, (old_state == TIMER_RUNNING));
            mp_raise_ValueError("Period out of range (1 ~ 86400000000 us)");
        }
        self->period = period;
        timer_set_period(self, (old_state == TIMER_RUNNING));
    }

    return mp_obj_new_int(self->period);
}

STATIC mp_obj_t machine_timer_callback(size_t n_args, const mp_obj_t *args)
{
    machine_timer_obj_t *self = args[0];

    if (n_args == 1) {
    	if (self->callback == NULL) return mp_const_false;
    	return mp_const_true;
    }

    if ((mp_obj_is_fun(args[1])) || (mp_obj_is_meth(args[1]))) {
		// Set the new callback
		self->callback = args[1];
    }
    else if (args[1] == mp_const_none) self->callback = NULL;

    return mp_const_none;
}
