==> loboris/MicroPython_ESP32_psRAM_LoBo/MicroPython_BUILD/components/micropython/esp32/machine_timer.c <==
#include <stdint.h>
#include <stdio.h>
#include "driver/timer.h"
#include "py/runtime.h"
#include "modmachine.h"
#define TIMER_INTR_SEL		TIMER_INTR_LEVEL
#define TIMER_DIVIDER_KHZ	40000	// 500 us per tick, 1 kHz
#define TIMER_DIVIDER_MHZ	80		// 1 us per tick, 1 MHz
#define TIMER_SCALE_KHZ		2
#define TIMER_SCALE_MHZ		100
#define TIMER_RUNNING	1
#define TIMER_PAUSED	0
#define TIMER_TYPE_ONESHOT	0
#define TIMER_TYPE_PERIODIC	1
#define TIMER_TYPE_CHRONO	2
#define TIMER_TYPE_EXTBASE	3
#define TIMER_TYPE_EXT		4
#define TIMER_TYPE_MAX		5
#define TIMER_EXT_NUM		8
#define TIMER_FLAGS			0

STATIC mp_obj_t machine_timer_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *args)
{
    mp_arg_check_num(n_args, n_kw, 1, 1, false);
    machine_timer_obj_t *self = m_new_obj(machine_timer_obj_t);
    self->base.type = &machine_timer_type;

    self->callback = NULL;
    self->handle = NULL;
    self->event_num = 0;
    self->cb_num = 0;
    self->debug_pin = -1;
	self->state = TIMER_PAUSED;
	self->type = TIMER_TYPE_MAX;

    int tmr = mp_obj_get_int(args[0]);
    if ((tmr < 0) || (tmr > 11)) {
    	mp_raise_ValueError("Only base timers 0~3 and extended timers 4~11 can be used.");
    }
    if (tmr < 4) {
    	// Base hardware timer
    	if ((tmr == ADC_TIMER_NUM) && (adc_timer_active)) {
        	mp_raise_ValueError("Timer used by ADC module.");
    	}
        if (mpy_timers_used[tmr] != NULL) {
        	mp_raise_ValueError("Timer already in use.");
        }
        mpy_timers_used[tmr] = self;
    }
    else {
    	// Extended timer
    	if ((mpy_timers_used[0] == NULL) || (mpy_timers_used[0]->type != TIMER_TYPE_EXTBASE)) {
			mp_raise_ValueError("Timer 0 not configured as extended timer.");
    	}
    	if (ext_timers[(tmr-4)] != NULL) {
        	mp_raise_ValueError("Extended Timer already in use.");
    	}
    	ext_timers[(tmr-4)] = self;
    }
    self->id = tmr;

    return self;
}

STATIC void machine_timer_disable(machine_timer_obj_t *self)
{
    if ((self->id < 4) && (self->handle)) {
        timer_pause((self->id >> 1) & 1, self->id & 1);
        if (self->type != TIMER_TYPE_CHRONO) esp_intr_free(self->handle);
        mpy_timers_used[self->id] = NULL;
    }
    else ext_timers[(self->id-4)] = NULL;
    self->callback = NULL;
    self->handle = NULL;
    self->event_num = 0;
    self->cb_num = 0;
    self->debug_pin = -1;
	self->state = TIMER_PAUSED;
	self->type = TIMER_TYPE_MAX;
}

STATIC void machine_timer_isr(void *self_in)
{
    machine_timer_obj_t *self = (machine_timer_obj_t *)self_in;

    if (self->id & 2) {
    	if (self->id & 1) TIMERG1.int_clr_timers.t1 = 1;
    	else TIMERG1.int_clr_timers.t0 = 1;
    	TIMERG1.hw_timer[self->id & 1].config.alarm_en = self->repeat;
    }
    else {
    	if (self->id & 1) TIMERG0.int_clr_timers.t1 = 1;
    	else TIMERG0.int_clr_timers.t0 = 1;
    	TIMERG0.hw_timer[self->id & 1].config.alarm_en = self->repeat;
    }

    if (self->debug_pin >= 0) {
    	if (self->debug_pin_mode >= 0) gpio_set_level(self->debug_pin, (self->debug_pin_mode & 1));
    	else gpio_set_level(self->debug_pin, (self->event_num & 1));
    }
    self->event_num++;

    if ((self->callback) && (mp_sched_schedule(self->callback, self, NULL))) self->cb_num++;
}

STATIC void machine_timer_enable(machine_timer_obj_t *self)
{
	if (self->id >= 4) {
		ext_timers[(self->id-4)] = self;
		return;
	}

	timer_config_t config;
    config.counter_dir = TIMER_COUNT_UP;
    config.intr_type = TIMER_INTR_LEVEL;
    config.counter_en = TIMER_PAUSE;

    if (self->type == TIMER_TYPE_CHRONO) {
        config.alarm_en = TIMER_ALARM_DIS;
        config.auto_reload = TIMER_AUTORELOAD_DIS;
    	config.divider = TIMER_DIVIDER_MHZ;
    }
    else {
        config.alarm_en = TIMER_ALARM_EN;
        config.auto_reload = self->repeat;
    	config.divider = TIMER_DIVIDER_KHZ;
    }

    check_esp_err(timer_init((self->id >> 1) & 1, self->id & 1, &config));

    // Timer's counter will initially start from value below.
    // Also, if auto_reload is set, this value will be automatically reload on alarm

    check_esp_err(timer_set_counter_value((self->id >> 1) & 1, self->id & 1, 0x00000000ULL));

    if (self->type != TIMER_TYPE_CHRONO) {
		// Configure the alarm value and the interrupt on alarm.
		check_esp_err(timer_set_alarm_value((self->id >> 1) & 1, self->id & 1, self->period));
		// Enable timer interrupt
		check_esp_err(timer_enable_intr((self->id >> 1) & 1, self->id & 1));
		// Register interrupt callback
		if (self->type == TIMER_TYPE_EXTBASE) {
			check_esp_err(timer_isr_register((self->id >> 1) & 1, self->id & 1, machine_ext_timer_isr, (void*)self, TIMER_FLAGS, &self->handle));
		}
		else {
			check_esp_err(timer_isr_register((self->id >> 1) & 1, self->id & 1, machine_timer_isr, (void*)self, TIMER_FLAGS, &self->handle));
		}
    	check_esp_err(timer_start((self->id >> 1) & 1, self->id & 1));
    }
    mpy_timers_used[self->id] = self;
}

STATIC mp_obj_t machine_timer_init_helper(machine_timer_obj_t *self, mp_uint_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args)
{
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_period,       MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = 10} },
        { MP_QSTR_mode,         MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = TIMER_TYPE_PERIODIC} },
        { MP_QSTR_callback,     MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = mp_const_none} },
        { MP_QSTR_dbgpin,       MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_dbgpinmode,   MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
    };

    machine_timer_disable(self);

    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    self->handle = NULL;
    self->event_num = 0;
    self->cb_num = 0;
    self->debug_pin = -1;

    if (self->id < 4) {
    	// Base hardware timer
		self->type = args[1].u_int & 3;

		if (self->type == TIMER_TYPE_EXTBASE) {
			if (self->id != 0) {
				mp_raise_ValueError("Only timer 0 can be used as extended timer.");
			}
			// Extended base timer types use an 2 kHz clock
			// set the period to 1 ms, repeat mode, no callback
			self->period = 2;
			self->repeat = 1;
			self->callback = NULL;
		}
		else if (self->type == TIMER_TYPE_CHRONO) {
			// Chrono Timer uses an 1 MHz clock, no callback
			// set period in us
			self->period = 1;
			self->repeat = 0;
			self->callback = NULL;
		}
		else {
			// Other timer types use an 2 kHz clock, convert period to ms.
			if (args[0].u_int < 1) self->period = 2;
			else self->period = args[0].u_int * 2;
			self->repeat = args[1].u_int & 1;
			if (args[2].u_obj != mp_const_none) self->callback = args[2].u_obj;
			// set the debug gpio if used
			if ((args[3].u_int >= 0) && (args[3].u_int < 34)) {
				self->debug_pin = args[3].u_int;
				self->debug_pin_mode = args[4].u_int;
				gpio_pad_select_gpio(self->debug_pin);
				gpio_set_direction(self->debug_pin, GPIO_MODE_OUTPUT);
				gpio_set_level(self->debug_pin, 0);
			}
		}
		// enable and start the timer
		machine_timer_enable(self);

		if (self->type != TIMER_TYPE_CHRONO) self->state = TIMER_RUNNING;
		else self->state = TIMER_PAUSED;
    }
    else {
    	// Extended timer
    	uint8_t mode = args[1].u_int & 3;
    	if ((mode != TIMER_TYPE_PERIODIC) && (mode != TIMER_TYPE_ONESHOT)) {
			mp_raise_ValueError("Wrong mode for extended timer.");
    	}
    	self->type = TIMER_TYPE_EXT;
		if (args[0].u_int < 1) self->period = 1;
		else self->period = args[0].u_int;
		self->repeat = args[1].u_int & 1;
		if (args[2].u_obj != mp_const_none) self->callback = args[2].u_obj;
		self->counter = 0x00000000ULL;
		self->alarm = self->period;
		self->state = TIMER_RUNNING;

		machine_timer_enable(self);
    }

    return mp_const_none;
}

STATIC mp_obj_t machine_timer_value(mp_obj_t self_in)
{
    machine_timer_obj_t *self = self_in;
    uint64_t result;

    if (self->id < 4) {
    	// Base hardware timer
		if (self->type == TIMER_TYPE_EXTBASE) result = self->event_num;  // value in ms
		else {
			timer_get_counter_value((self->id >> 1) & 1, self->id & 1, &result);
			if (self->type != TIMER_TYPE_CHRONO) result *= (self->period / 2);  // value in us
		}
    }
    else {
    	// Extended timer
    	result = self->counter;  // value in ms
    }
    return mp_obj_new_int_from_ull(result);
}

STATIC mp_obj_t machine_timer_start(mp_obj_t self_in)
{
    machine_timer_obj_t *self = self_in;

    if (self->type == TIMER_TYPE_CHRONO) {
        if (self->state == TIMER_RUNNING) {
		    check_esp_err(timer_pause((self->id >> 1) & 1, self->id & 1));
        }
        self->event_num = 0;
		check_esp_err(timer_set_counter_value((self->id >> 1) & 1, self->id & 1, 0x00000000ULL));
		check_esp_err(timer_start((self->id >> 1) & 1, self->id & 1));
		self->state = TIMER_RUNNING;
	}
	return mp_const_none;
}

STATIC mp_obj_t machine_timer_shot(size_t n_args, const mp_obj_t *args)
{
    machine_timer_obj_t *self = args[0];

    if (self->type != TIMER_TYPE_ONESHOT) {
    	mp_raise_ValueError("Timer is not one_shot timer.");
    }

    int tmo = self->period;
    if (n_args > 1) tmo = mp_obj_get_int(args[1]) * 2;
    if (tmo < 1) tmo = self->period;
    uint64_t cnt_val;

    check_esp_err(timer_pause((self->id >> 1) & 1, self->id & 1));
    check_esp_err(timer_get_counter_value((self->id >> 1) & 1, self->id & 1, &cnt_val));
    check_esp_err(timer_set_alarm_value((self->id >> 1) & 1, self->id & 1, cnt_val+tmo));
    check_esp_err(timer_start((self->id >> 1) & 1, self->id & 1));
    if (self->id & 2) {
    	TIMERG1.hw_timer[self->id & 1].config.alarm_en = 1;
    }
    else {
    	TIMERG0.hw_timer[self->id & 1].config.alarm_en = 1;
    }

    return mp_const_none;
}

STATIC mp_obj_t machine_timer_period(size_t n_args, const mp_obj_t *args)
{
    machine_timer_obj_t *self = args[0];
    uint32_t period = 1;

    if (n_args > 1) {
		if (self->type == TIMER_TYPE_EXTBASE) return MP_OBJ_NEW_SMALL_INT(1);

		uint8_t old_state = self->state;
		// Pause timer
		if (self->id < 4) {
			// Base hardware timer
			if (self->state == TIMER_RUNNING) {
				check_esp_err(timer_pause((self->id >> 1) & 1, self->id & 1));
			}
		}
		self->state = TIMER_PAUSED;

		// Set new period
		period = mp_obj_get_int(args[1]);
		if (self->type == TIMER_TYPE_CHRONO) {
			if (period < 10) period = 1;
			else period /= 10;
		}
		else if (self->type == TIMER_TYPE_EXT) {
			if (period < 1) period = 1;
			self->counter = 0x00000000ULL;
			self->alarm = period;
		}
		else {
			if (period < 1) period = 2;
			else period *= 2;
		}
		self->period = period;
		if (self->id < 4) {
			check_esp_err(timer_set_counter_value((self->id >> 1) & 1, self->id & 1, 0x00000000ULL));
			check_esp_err(timer_set_alarm_value((self->id >> 1) & 1, self->id & 1, self->period));
		}

		if ((self->id < 4) && (old_state == TIMER_RUNNING)){
			// Base hardware timer
			check_esp_err(timer_start((self->id >> 1) & 1, self->id & 1));
		}
		self->state = old_state;
    }

    if (self->type == TIMER_TYPE_CHRONO) period = self->period * 10;
    else if (self->type == TIMER_TYPE_EXT) period = self->period;
    else period = self->period / 2;

    return MP_OBJ_NEW_SMALL_INT(period);
}

STATIC mp_obj_t machine_timer_callback(size_t n_args, const mp_obj_t *args)
{
    machine_timer_obj_t *self = args[0];

    if (n_args == 1) {
    	if (self->callback == NULL) return mp_const_false;
    	return mp_const_true;
    }

    if ((self->type == TIMER_TYPE_EXTBASE) || (self->type == TIMER_TYPE_CHRONO)) return mp_const_false;

    uint8_t old_state = self->state;
    // Pause timer
    if (self->id < 4) {
    	// Base hardware timer
		if (self->state == TIMER_RUNNING) {
			check_esp_err(timer_pause((self->id >> 1) & 1, self->id & 1));
		}
    }
    self->state = TIMER_PAUSED;

    if ((MP_OBJ_IS_FUN(args[1])) || (MP_OBJ_IS_METH(args[1]))) {
		// Set new callback
		self->counter = 0x00000000ULL;
		self->alarm = self->period;
		self->callback = args[1];
    }
    else self->callback = NULL;


    if ((self->id < 4) && (old_state == TIMER_RUNNING)){
    	// Base hardware timer
		check_esp_err(timer_start((self->id >> 1) & 1, self->id & 1));
    }
	self->state = old_state;

    return mp_const_none;
}
